<resources>
    <string name="app_name">Login Mvp Mvvm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_screen">Tela Cadastro</string>
    <string name="passsword">Senha:</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="enter">Entrar</string>
    <string name="disciple">Discipulo</string>
    <string name="leader">Líder</string>
    <string name="birthdate">Data De Nascimento:</string>
    <string name="name">Nome:</string>
    <string name="number_phone">Telefone:</string>
    <string name="confirm_password">Confirmar Senha:</string>
    <string name="register">Cadastrar</string>
    <string name="txt_identificator">Identificador: %s</string>
    <string name="txt_created_time">Criado Em: %s</string>
    <string name="txt_modified_time">Modificado Em: %s</string>
    <string name="txt_birthdate">Data De Nascimento: %s</string>
    <string name="txt_phone">Telefone: %s</string>
    <string name="txt_name">Nome: %s</string>
    <string name="txt_type">Função: %s</string>
    <string name="txt_row_identificator">Identificador: %s</string>
    <string name="txt_email">Email: %s</string>
    <string name="txt_status">Status: %s</string>

</resources>