<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.access.signup.SignUpFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_screen"
        android:textSize="@dimen/size_24sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:errorEnabled="false"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/name"
            android:maxLines="1"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:errorEnabled="false"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/birthdate"
            android:maxLines="1"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:errorEnabled="false"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/number_phone"
            android:inputType="date"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:errorEnabled="false"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_blue_light">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leader"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_disciple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disciple"
                android:layout_gravity="end"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/passsword"
            android:maxLines="1"
            android:maxLength="22"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_blue_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:hint="@string/confirm_password"
            android:maxLines="1"
            android:maxLength="22"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/size_16sp"
        android:background="@drawable/bg_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>
</androidx.core.widget.NestedScrollView>