<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.access.login.LoginFragment"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="@dimen/size_32sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_16dp"/>

   <com.google.android.material.textfield.TextInputLayout
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:id="@+id/til_email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="@dimen/space_32dp"
       android:layout_marginTop="@dimen/space_32dp"
       android:layout_below="@id/title_login"
       app:errorEnabled="false">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/et_email"
           android:layout_width="match_parent"
           android:layout_height="@dimen/space_56dp"
           android:maxLines="1"
           android:maxLength="55"
           android:hint="@string/email"
           android:inputType="textEmailAddress"/>
   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:layout_below="@id/til_email"
        android:layout_marginHorizontal="@dimen/space_32dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_blue_light"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:maxLines="1"
            android:maxLength="16"
            android:hint="@string/passsword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:background="@drawable/bg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_password"
        android:layout_marginTop="@dimen/space_64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="32dp"
        android:text="@string/enter" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_24dp"
        android:progressTint="@color/black"
        android:visibility="gone"/>
</RelativeLayout>